<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.android.navigation.PersegiPanjangFragment">

        <!-- TODO: Update blank fragment layout -->


        <TextView
                android:text="@string/hitung_segi_panjang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:layout_marginEnd="179dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="174dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="628dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.463" app:layout_constraintVertical_bias="1.0"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/panjang"
                android:ems="10"
                android:id="@+id/et_panjang"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="98dp"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="180dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lebar"
                android:ems="10"
                android:id="@+id/et_lebar"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/et_panjang"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.07"/>
        <Button
                android:text="@string/hitung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_htg_prsegi" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/et_lebar"
                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.074"/>
        <TextView
                android:text="@string/luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hsl_luas_prsegi" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.134" app:layout_constraintTop_toBottomOf="@+id/btn_htg_prsegi"
                android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/hsl_kll_prsegi" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/hsl_luas_prsegi" android:layout_marginTop="24dp"
                app:layout_constraintHorizontal_bias="0.094"/>
        <Button
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_share" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/hsl_kll_prsegi"
                app:layout_constraintHorizontal_bias="0.061" android:layout_marginTop="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
