<?xml version="1.0" encoding="utf-8"?>
<layout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AboutFragment">

        <!-- TODO: Update blank fragment layout -->


        <TextView
                android:text="@string/fresya_maharani_sentosa"
                android:textSize="20sp"
                android:layout_width="273dp"
                android:layout_height="63dp"
                android:id="@+id/abt_nama"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="176dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="176dp"
                android:layout_marginBottom="449dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.434" app:layout_constraintVertical_bias="0.492"/>
        <TextView
                android:text="@string/_6706184104"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/abt_nim" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/abt_nama"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.084"/>
        <TextView
                android:text="@string/d3if_42_04_"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/abt_kls" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="357dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="102dp" app:layout_constraintTop_toBottomOf="@+id/abt_nim"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>
